# ChangeLog for sci-libs/gsl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/gsl/ChangeLog,v 1.77 2010/08/09 09:32:55 xarthisius Exp $

  02 Jul 2014; François Bissey <francois.bissey@canterbury.ac.nz>
  gsl-1.16-r1.ebuild:
  Tested on x64-macos, keywording.

*gsl-1.16-r1 (19 Aug 2013)

  19 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org>
  +files/gsl-1.16-cblas-external.patch, +gsl-1.16-r1.ebuild,
  -files/gsl-1.15-cblas.patch, -gsl-1.15-r3.ebuild, metadata.xml:
  sci-libs/gsl: Version bump

  22 Feb 2013; Justin Lecher <jlec@gentoo.org> gsl-1.15-r3.ebuild,
  metadata.xml:
  Use tc-getPKG_CONFIG from toolchain-funcs.eclass instead of plain pkg-config

*gsl-1.15-r3 (19 Dec 2012)

  19 Dec 2012; Denis Dupeyron <calchan@gentoo.org> -gsl-1.15-r2.ebuild,
  +gsl-1.15-r3.ebuild, files/gsl-1.15-cblas.patch, metadata.xml:
  Let gsl optionally build against an external cblas implementation and
  disables gsl as a possible cblas alternative when doing so.

  23 Feb 2012; Sébastien Fabbro <bicatali@gentoo.org> gsl-1.15-r2.ebuild,
  files/gsl-1.15-cblas.patch, -files/gsl-1.15-pkgconfig.patch:
  Fixed gsl-config/pkg-config issues

  23 Feb 2012; Justin Lecher <jlec@gentoo.org> gsl-1.15-r2.ebuild:
  Correct usage of autotools-eclass, prevents double call of elibtoolize

*gsl-1.15-r2 (11 Oct 2011)

  11 Oct 2011; Justin Lecher <jlec@gentoo.org> -gsl-1.15-r1.ebuild,
  +gsl-1.15-r2.ebuild, +files/gsl-1.15-cblas.patch, metadata.xml:
  Fix undefined symbols because of missing gslcblas lib during linking

  22 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> +gsl-1.15-r1.ebuild,
  +files/gsl-1.15-pkgconfig.patch, +metadata.xml:
  Imported from bicatali overlay

*gsl-1.15-r1 (21 May 2011)

  21 May 2011; Sébastien Fabbro <bicatali@gentoo.org> -gsl-1.14-r2.ebuild,
  -files/gsl-1.14-pkgconfig.patch, +gsl-1.15-r1.ebuild,
  +files/gsl-1.15-pkgconfig.patch:
  Version bump
