@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sci-libs/gsl/ChangeLog,v 1.77 2010/08/09 09:32:55 xarthisius Exp $
 
+*gsl-1.16-r2 (10 Nov 2014)
+
+  10 Nov 2014; Christoph Junghans <ottxor@gentoo.org> +gsl-1.16-r2.ebuild:
+  added multilib support (bug #528622)
+
   02 Jul 2014; François Bissey <francois.bissey@canterbury.ac.nz>
   gsl-1.16-r1.ebuild:
   Tested on x64-macos, keywording.
